<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/finalConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:visibility="invisible">

        <Button
            android:id="@+id/playAgainButton"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:onClick="playAgain"
            android:text="@string/play_again"
            android:textSize="15sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/finalScoreCardTextView"
            android:layout_width="274dp"
            android:layout_height="75dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/your_score"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="45sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/finalScoreTextView"
            android:layout_width="223dp"
            android:layout_height="94dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="104dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/_00000"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="75sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/finalAnswered"
            android:layout_width="228dp"
            android:layout_height="39dp"
            android:layout_marginTop="252dp"
            android:layout_marginEnd="148dp"
            android:layout_marginRight="148dp"
            android:gravity="center"
            android:text="@string/answered"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="25sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/finalCorrect"
            android:layout_width="228dp"
            android:layout_height="39dp"
            android:layout_marginTop="288dp"
            android:layout_marginEnd="148dp"
            android:layout_marginRight="148dp"
            android:gravity="center"
            android:text="@string/finalcorrect"
            android:textColor="@android:color/holo_green_light"
            android:textSize="25sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/finalIncorrect"
            android:layout_width="228dp"
            android:layout_height="39dp"
            android:layout_marginTop="324dp"
            android:layout_marginEnd="148dp"
            android:layout_marginRight="148dp"
            android:gravity="center"
            android:text="@string/incorrect"
            android:textColor="@android:color/holo_red_light"
            android:textSize="25sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/gameConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_orange_light"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="368dp"
            android:layout_height="218dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_light"
                android:onClick="chooseAnswer"
                android:tag="0"
                android:text="@string/_0"
                android:textSize="45sp"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="0"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_red_light"
                android:onClick="chooseAnswer"
                android:tag="1"
                android:text="@string/_1"
                android:textSize="45sp"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="0"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_green_light"
                android:onClick="chooseAnswer"
                android:tag="2"
                android:text="@string/_2"
                android:textSize="45sp"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_purple"
                android:onClick="chooseAnswer"
                android:tag="3"
                android:text="@string/_3"
                android:textSize="45sp"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="1"
                app:layout_rowWeight="1" />


        </android.support.v7.widget.GridLayout>

        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="65dp"
            android:layout_height="46dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/holo_orange_dark"
            android:gravity="center"
            android:text="@string/_30s"
            android:textColor="@android:color/background_dark"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pointsTextView"
            android:layout_width="90dp"
            android:layout_height="49dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/holo_blue_dark"
            android:gravity="center"
            android:text="@string/_0_0"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sumTextView"
            android:layout_width="183dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/_3_25"
            android:textColor="@android:color/background_dark"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/pointsTextView"
            app:layout_constraintHorizontal_bias="0.735"
            app:layout_constraintStart_toEndOf="@+id/timerTextView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="355dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text=""
            android:textSize="38sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
            app:layout_constraintVertical_bias="0.087" />

        <Button
            android:id="@+id/nextButton"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:onClick="nextButton"
            android:text="@string/next_button"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/startConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_dark"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/startButton"
            android:layout_width="158dp"
            android:layout_height="151dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/holo_green_dark"
            android:onClick="startGame"
            android:text="@string/start"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>